[gd_scene load_steps=12 format=3 uid="uid://dxdxaip521lcq"]

[ext_resource type="Script" path="res://sandbox.gd" id="1_52v6e"]
[ext_resource type="TileSet" uid="uid://d1i2b4bur86mn" path="res://level_tile_set.tres" id="2_3l780"]
[ext_resource type="PackedScene" uid="uid://opog1ttqf8wp" path="res://walking_guard.tscn" id="2_qglee"]
[ext_resource type="PackedScene" uid="uid://jpjqw4ordrv8" path="res://prisoner.tscn" id="3_t6lhf"]
[ext_resource type="PackedScene" uid="uid://dwti8gonass1c" path="res://escape_area.tscn" id="4_5ito0"]

[sub_resource type="Curve2D" id="Curve2D_b7sg7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 94.0478, 92.2425, 0, 0, 0, 0, 284.439, 95.1617, 0, 0, 0, 0, 286.433, 166.195, 0, 0, 0, 0, 354.217, 166.195, 0, 0, 0, 0, 352.223, 218.74, 0, 0, 0, 0, 422, 220.686, 0, 0, 0, 0, 422, 409.458, 0, 0, 0, 0, 92.0541, 406.539, 0, 0, 0, 0, 94.0478, 92.2425)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_a1i1x"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 473.834, 94.1886, 0, 0, 0, 0, 929.379, 92.2425)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_gt1pl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 738.987, 279.069, 0, 0, 0, 0, 742.974, 596.284)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_rhw52"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 796.802, 343.29, 0, 0, 0, 0, 1178.58, 342.317, 0, 0, 0, 0, 1180.58, 602.123, 0, 0, 0, 0, 795.806, 600.177, 0, 0, 0, 0, 796.802, 343.29)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_bmcxn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 508.723, 345.237, 0, 0, 0, 0, 1176.59, 342.317, 0, 0, 0, 0, 1177.59, 605.042, 0, 0, 0, 0, 668.213, 599.204, 0, 0, 0, 0, 666.22, 425.027, 0, 0, 0, 0, 416.019, 423.081, 0, 0, 0, 0, 353.22, 423.081, 0, 0, 0, 0, 349.232, 604.069, 0, 0, 0, 0, 91.0573, 602.123, 0, 0, 0, 0, 91.0573, 404.593, 0, 0, 0, 0, 421.003, 406.539, 0, 0, 0, 0, 508.723, 405.566, 0, 0, 0, 0, 508.723, 345.237)
}
point_count = 13

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5w6x"]
size = Vector2(128, 126)

[node name="sandbox" type="Node2D"]
script = ExtResource("1_52v6e")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_3l780")
format = 2
layer_0/tile_data = PackedInt32Array(655379, 655360, 11, 19, 655360, 10, 0, 589824, 10, 589824, 720896, 11, 655360, 589824, 11, 655361, 720896, 10, 655362, 720896, 10, 655363, 720896, 10, 524288, 720896, 11, 458752, 720896, 11, 393216, 720896, 11, 327680, 720896, 11, 262144, 720896, 11, 196608, 720896, 11, 131072, 720896, 11, 65536, 720896, 11, 1, 720896, 10, 2, 720896, 10, 3, 720896, 10, 4, 720896, 10, 5, 720896, 10, 6, 720896, 10, 7, 720896, 10, 8, 720896, 10, 9, 720896, 10, 10, 720896, 10, 11, 720896, 10, 12, 720896, 10, 13, 720896, 10, 14, 720896, 10, 15, 851968, 14, 16, 917504, 14, 17, 720896, 10, 18, 720896, 10, 65555, 720896, 11, 131091, 720896, 11, 196627, 720896, 11, 262163, 720896, 11, 327699, 720896, 11, 393235, 720896, 11, 458771, 720896, 11, 524307, 720896, 11, 589843, 720896, 11, 655378, 720896, 10, 655377, 720896, 10, 655376, 720896, 10, 655375, 720896, 10, 655374, 720896, 10, 655373, 720896, 10, 655372, 720896, 10, 655371, 720896, 10, 655370, 720896, 10, 655369, 917504, 15, 655368, 917504, 13, 655367, 917504, 13, 655366, 851968, 15, 655365, 720896, 10, 655364, 720896, 10, 65552, 917504, 12, 131088, 917504, 12, 131087, 851968, 12, 65551, 851968, 12, 196624, 1114112, 11, 196623, 1048576, 11, 131074, 1048576, 10, 131075, 1114112, 10, 196611, 917504, 15, 196612, 655360, 10, 262148, 589824, 11, 262149, 655360, 10, 327685, 983040, 10, 196610, 720896, 15, 262146, 720896, 11, 327682, 983040, 10, 589832, 851968, 13, 458761, 917504, 11, 524297, 720896, 11, 589833, 786432, 14, 131080, 1048576, 10, 131081, 1114112, 10, 196618, 720896, 10, 196619, 720896, 10, 196620, 851968, 14, 131085, 917504, 11, 196616, 1048576, 11, 196617, 917504, 15, 196621, 786432, 14, 262157, 1114112, 11, 262156, 1048576, 11, 393233, 917504, 11, 458769, 720896, 11, 524305, 655360, 11, 524304, 720896, 10, 524303, 720896, 10, 524302, 917504, 15, 524301, 1048576, 11, 393229, 917504, 11, 458765, 720896, 14, 458766, 1114112, 10, 589831, 851968, 13, 589830, 720896, 14, 524294, 917504, 11)

[node name="walking_guard" parent="." instance=ExtResource("2_qglee")]
position = Vector2(-1.34824, -2.79692)
scale = Vector2(1.00319, 1.02769)
curve = SubResource("Curve2D_b7sg7")
speed = 64.0

[node name="walking_guard2" parent="." instance=ExtResource("2_qglee")]
position = Vector2(-1.34824, -2.79692)
scale = Vector2(1.00319, 1.02769)
curve = SubResource("Curve2D_a1i1x")
speed = 64.0
go_back = true

[node name="walking_guard3" parent="." instance=ExtResource("2_qglee")]
position = Vector2(-1.34824, -2.79692)
scale = Vector2(1.00319, 1.02769)
curve = SubResource("Curve2D_gt1pl")
speed = 64.0
go_back = true

[node name="walking_guard4" parent="." instance=ExtResource("2_qglee")]
position = Vector2(-1.34824, -2.79692)
scale = Vector2(1.00319, 1.02769)
curve = SubResource("Curve2D_rhw52")
speed = 64.0

[node name="walking_guard5" parent="." instance=ExtResource("2_qglee")]
position = Vector2(-1.34824, -2.79692)
scale = Vector2(1.00319, 1.02769)
curve = SubResource("Curve2D_bmcxn")
speed = 64.0

[node name="escape_area" parent="." instance=ExtResource("4_5ito0")]
position = Vector2(1160, 104)

[node name="escape_area_shape" type="CollisionShape2D" parent="escape_area"]
position = Vector2(-8, 23)
shape = SubResource("RectangleShape2D_x5w6x")

[node name="prisoner" parent="." instance=ExtResource("3_t6lhf")]
position = Vector2(114, 581)
speed = 256.0
player_controlled = true

[node name="prisoner2" parent="." instance=ExtResource("3_t6lhf")]
position = Vector2(168, 592)
speed = 256.0

[node name="ui_layer" type="CanvasLayer" parent="."]

[node name="game_over_panel" type="PanelContainer" parent="ui_layer"]
unique_name_in_owner = true
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ui_layer/game_over_panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ui_layer/game_over_panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="ui_layer/game_over_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"

[node name="restart_button" type="Button" parent="ui_layer/game_over_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="completion_panel" type="PanelContainer" parent="ui_layer"]
unique_name_in_owner = true
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ui_layer/completion_panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ui_layer/completion_panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="ui_layer/completion_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETED"

[node name="restart_button" type="Button" parent="ui_layer/completion_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="ui_layer/game_over_panel/MarginContainer/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ui_layer/completion_panel/MarginContainer/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
